--- a/Gearbox_CA.ipynb
+++ b/Gearbox_CA.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92d4b391",
+   "id": "995bbf7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a25a8f7",
+   "id": "826cbbcd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "909d36e8",
+   "id": "57a4514d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7682d428",
+   "id": "16f8d732",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9ee9992d",
+   "id": "5cccd556",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2ff0f28a",
+   "id": "61b19419",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "231a4245",
+   "id": "8e564e44",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "38d5afe1",
+   "id": "511de825",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,8 +363,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "3541ba54",
+   "execution_count": 6,
+   "id": "5ffe69bf",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
        "[5001 rows x 7 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,8 +586,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "6b0faebe",
+   "execution_count": 7,
+   "id": "e2da50e6",
    "metadata": {
     "scrolled": true
    },
@@ -599,9 +599,9 @@
       "OpenCreditAccount_topic: 0x7b20ae77867a263a1074203a2da261ef0d096c99395c59c9d4a0104b9f334a27\n",
       "CloseCreditAccount_topic: 0xca05b632388199c23de1352b2e96fd72a0ec71611683330b38060c004bbf0a76\n",
       "RepayCreditAccount_topic: 0xe7c7987373a0cc4913d307f23ab8ef02e0333a2af445065e2ef7636cffc6daa7\n",
-      "2021-12-27 20:02:38 : 0\n",
-      "2021-12-27 20:02:52 : 50\n",
-      "2021-12-27 20:03:05 : 100\n"
+      "2021-12-28 02:25:08 : 0\n",
+      "2021-12-28 02:25:22 : 50\n",
+      "2021-12-28 02:25:35 : 100\n"
      ]
     },
     {
@@ -884,8 +884,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "baa22eeb",
+   "execution_count": 8,
+   "id": "6e1aad11",
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1284,7 @@
        "[5001 rows x 33 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1292,7 +1292,7 @@
    "source": [
     "data_cols = [x['name'] for x in df_abi[df_abi['name']=='getCreditAccountDataExtended']['abi'].values[0]['outputs'][0]['components']]\n",
     "\n",
-    "df['batchtime'] = datetime.now()\n",
+    "df['batchtime'] = datetime.utcnow()\n",
     "\n",
     "for ids in list(chunks(list(df[pd.notna(df['Borrower'])].loc[:,'id']), 400)): #chunk size for multicall = 400\n",
     "    id_range = list(df['id'].isin(ids))\n",
@@ -1322,8 +1322,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "dc155160",
+   "execution_count": 9,
+   "id": "004ca57f",
    "metadata": {},
    "outputs": [
     {
@@ -1516,54 +1516,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>98</td>\n",
-       "      <td>0x54046d55aF25d6689C35b5bC9e3b09332aD0662e</td>\n",
-       "      <td>0x968f9a68a98819E2e6Bb910466e191A7b6cf02F0</td>\n",
-       "      <td>3000000000000000000</td>\n",
-       "      <td>13887429</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>WETH</td>\n",
-       "      <td>0x0D72A35DF86eFdefE3593b50BbD9EdecFA5BAAD7</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.000000e+18</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>99</td>\n",
-       "      <td>0xFCfBf5eDB1948Ccb0a412DE53f1A4FA825d702d7</td>\n",
-       "      <td>0x2664cc24CBAd28749B3Dd6fC97A6B402484De527</td>\n",
-       "      <td>3000000000</td>\n",
-       "      <td>13887429</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>USDC</td>\n",
-       "      <td>0x2aE1BCBaa70ce157cAF7614E2c6246BfB950321e</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.000000e+09</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>100</th>\n",
        "      <td>100</td>\n",
        "      <td>0xbD18023746e09Cf17f3e832003Be9264eaBD8612</td>\n",
@@ -1635,9 +1587,57 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>103</td>\n",
+       "      <td>0x07A1D17ad43d5c0e42F0950671934Ac481609268</td>\n",
+       "      <td>0x2664cc24CBAd28749B3Dd6fC97A6B402484De527</td>\n",
+       "      <td>8000000000</td>\n",
+       "      <td>13890686</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>USDC</td>\n",
+       "      <td>0x727F75F271Fb0d42C13e76dc2b3C4679418C571f</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.180364e+08</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.950000e+18</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>104</td>\n",
+       "      <td>0x5Ce834B2ece276B9838449602Ef4A35d089A284E</td>\n",
+       "      <td>0x968f9a68a98819E2e6Bb910466e191A7b6cf02F0</td>\n",
+       "      <td>300000000000000000</td>\n",
+       "      <td>13890889</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>WETH</td>\n",
+       "      <td>0x2a40AAf3e076187B67CcCE82E20da5Ce27Caa2A7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.597299e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.000000e+17</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>68 rows × 33 columns</p>\n",
+       "<p>69 rows × 33 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1648,11 +1648,11 @@
        "8      8  0xF91027C04807c71c7771a2314A622dFA0fE509A1   \n",
        "11    11  0x0B9851B7bcE408dd36d3473a0A0eE8F14ce64ca3   \n",
        "..   ...                                         ...   \n",
-       "98    98  0x54046d55aF25d6689C35b5bC9e3b09332aD0662e   \n",
-       "99    99  0xFCfBf5eDB1948Ccb0a412DE53f1A4FA825d702d7   \n",
        "100  100  0xbD18023746e09Cf17f3e832003Be9264eaBD8612   \n",
        "101  101  0x934BE1e79E3D081429855Afd09d2d94aaA504770   \n",
        "102  102  0x78b2d242E223f90dC3D56F81bAD82c54B22E1DAF   \n",
+       "103  103  0x07A1D17ad43d5c0e42F0950671934Ac481609268   \n",
+       "104  104  0x5Ce834B2ece276B9838449602Ef4A35d089A284E   \n",
        "\n",
        "                                             CM          borrowedAmount  \\\n",
        "0    0x777E23A2AcB2fCbB35f6ccF98272d03C722Ba6EB  2000000000000000000000   \n",
@@ -1661,11 +1661,11 @@
        "8    0x968f9a68a98819E2e6Bb910466e191A7b6cf02F0     1000000000000000000   \n",
        "11   0x968f9a68a98819E2e6Bb910466e191A7b6cf02F0      290000000000000000   \n",
        "..                                          ...                     ...   \n",
-       "98   0x968f9a68a98819E2e6Bb910466e191A7b6cf02F0     3000000000000000000   \n",
-       "99   0x2664cc24CBAd28749B3Dd6fC97A6B402484De527              3000000000   \n",
        "100  0x968f9a68a98819E2e6Bb910466e191A7b6cf02F0     3000000000000000000   \n",
        "101  0x968f9a68a98819E2e6Bb910466e191A7b6cf02F0     3000000000000000000   \n",
        "102  0x2664cc24CBAd28749B3Dd6fC97A6B402484De527              3300000000   \n",
+       "103  0x2664cc24CBAd28749B3Dd6fC97A6B402484De527              8000000000   \n",
+       "104  0x968f9a68a98819E2e6Bb910466e191A7b6cf02F0      300000000000000000   \n",
        "\n",
        "        Since  Decimals Symbol                                    Borrower  \\\n",
        "0    13858003      18.0    DAI  0x8a4B89D76A1a745a4A1aDEBd3793253FBa0adADc   \n",
@@ -1674,11 +1674,11 @@
        "8    13864789      18.0   WETH  0x896b94f4f27f12369698C302e2049cAe86936BbB   \n",
        "11   13864924      18.0   WETH  0xC16414AC1fedfDAC4F8A09674D994e1BbB9d7113   \n",
        "..        ...       ...    ...                                         ...   \n",
-       "98   13887429      18.0   WETH  0x0D72A35DF86eFdefE3593b50BbD9EdecFA5BAAD7   \n",
-       "99   13887429       6.0   USDC  0x2aE1BCBaa70ce157cAF7614E2c6246BfB950321e   \n",
        "100  13887461      18.0   WETH  0x01d104FFE610Ac60a22628C4558391d1CB55aA6c   \n",
        "101  13887473      18.0   WETH  0xdDA32e049c6555BA701246618f65866a679AD168   \n",
        "102  13887987       6.0   USDC  0x5ce1B4779557996B1d2f3e1042C1789b7B7A9102   \n",
+       "103  13890686       6.0   USDC  0x727F75F271Fb0d42C13e76dc2b3C4679418C571f   \n",
+       "104  13890889      18.0   WETH  0x2a40AAf3e076187B67CcCE82E20da5Ce27Caa2A7   \n",
        "\n",
        "     Amount  Amount_Decimals  ... Balance_FEI Balance_LINK Balance_SNX  \\\n",
        "0       NaN              NaN  ...           0          0.0         0.0   \n",
@@ -1687,11 +1687,11 @@
        "8       NaN              NaN  ...           0          0.0         0.0   \n",
        "11      NaN              NaN  ...           0          0.0         0.0   \n",
        "..      ...              ...  ...         ...          ...         ...   \n",
-       "98      NaN              NaN  ...           0          0.0         0.0   \n",
-       "99      NaN              NaN  ...           0          0.0         0.0   \n",
        "100     NaN              NaN  ...           0          0.0         0.0   \n",
        "101     NaN              NaN  ...           0          0.0         0.0   \n",
        "102     NaN              NaN  ...           0          0.0         0.0   \n",
+       "103     NaN              NaN  ...           0          0.0         0.0   \n",
+       "104     NaN              NaN  ...           0          0.0         0.0   \n",
        "\n",
        "     Balance_UNI  Balance_USDC Balance_WBTC  Balance_WETH Balance_YFI  \\\n",
        "0              0  0.000000e+00          0.0  7.325157e+17         0.0   \n",
@@ -1700,11 +1700,11 @@
        "8              0  0.000000e+00          0.0  2.000000e+18         0.0   \n",
        "11             0  0.000000e+00          0.0  1.290000e+18         0.0   \n",
        "..           ...           ...          ...           ...         ...   \n",
-       "98             0  0.000000e+00          0.0  4.000000e+18         0.0   \n",
-       "99             0  4.000000e+09          0.0  0.000000e+00         0.0   \n",
        "100            0  0.000000e+00          0.0  4.000000e+18         0.0   \n",
        "101            0  0.000000e+00          0.0  4.000000e+18         0.0   \n",
        "102            0  4.400000e+09          0.0  0.000000e+00         0.0   \n",
+       "103            0  1.180364e+08          0.0  2.950000e+18         0.0   \n",
+       "104            0  1.597299e+09          0.0  2.000000e+17         0.0   \n",
        "\n",
        "    Balance_yvDAI Balance_yvUSDC  \n",
        "0             0.0            0.0  \n",
@@ -1713,16 +1713,16 @@
        "8             0.0            0.0  \n",
        "11            0.0            0.0  \n",
        "..            ...            ...  \n",
-       "98            0.0            0.0  \n",
-       "99            0.0            0.0  \n",
        "100           0.0            0.0  \n",
        "101           0.0            0.0  \n",
        "102           0.0            0.0  \n",
+       "103           0.0            0.0  \n",
+       "104           0.0            0.0  \n",
        "\n",
-       "[68 rows x 33 columns]"
+       "[69 rows x 33 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1733,9 +1733,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "e71654b4",
-   "metadata": {},
+   "execution_count": 10,
+   "id": "3400f9fe",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1776,7 +1778,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1791,15 +1793,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "6bda9205",
+   "execution_count": 11,
+   "id": "9434b9ea",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b04aa9ff",
+   "id": "7d6b9e09",
    "metadata": {},
    "source": [
     "Data Sduto Report\n",
@@ -1809,7 +1811,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "007ef064",
+   "id": "934b6537",
    "metadata": {},
    "outputs": [],
    "source": []
