larger batch size for multicall

--- a/Geabox-Yearn.ipynb
+++ b/Geabox-Yearn.ipynb
@@ -106,7 +106,7 @@
     "idList = list(range(countCreditAccounts))\n",
     "multi_idCA = {}\n",
     "\n",
-    "for ids in list(chunks(idList, 400)): #chunk size for multicall = 400\n",
+    "for ids in list(chunks(idList, 1000)): #chunk size for multicall = 1000 (reduce in cse of issues)\n",
     "    #d_ca = get_data_multicall(df.loc[id_range], 'creditAccounts', df_abi, AccountFactory)\n",
     "    multi_result = Multicall([\n",
     "                    Call(AccountFactory, ['creditAccounts(uint256)(address)', x], [[x, Web3.toChecksumAddress]]) for x in ids\n",
@@ -136,7 +136,7 @@
    "outputs": [],
    "source": [
     "multi_idBalance = {}\n",
-    "for ids in list(chunks(list(multi_idCA), 400)): #chunk size for multicall = 400\n",
+    "for ids in list(chunks(list(multi_idCA), 1000)): #chunk size for multicall = 1000 (reduce in cse of issues)\n",
     "    multi_result = Multicall([\n",
     "                    Call(yVaultUSDC, ['balanceOf(address)(uint256)', multi_idCA[x]], [[x, None]]) for x in ids\n",
     "                    ]\n",
