--- a/chainlink_pricefeeds.ipynb
+++ b/chainlink_pricefeeds.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1f79641f",
    "metadata": {},
    "source": [
     "**Support code for Exploratory Report** <br>\n",
@@ -11,6 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "b9d229ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,13 +22,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "3a4cddce",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ethereum connected: False\n"
+      "Ethereum connected: True\n"
      ]
     }
    ],
@@ -50,6 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "7c4dd9cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,6 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "415b786a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,6 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "a43c7def",
    "metadata": {
     "scrolled": true
    },
@@ -114,24 +120,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-04-03 22:07:19.185961 from_block= 0\n",
-      "2022-04-03 22:07:19.198964 BTC-ETH\n",
-      "2022-04-03 22:07:22.793959 USDC-ETH\n",
-      "2022-04-03 22:07:34.736919 DAI-ETH\n",
-      "2022-04-03 22:07:47.550861 1INCH-ETH\n",
-      "2022-04-03 22:07:51.398871 AAVE-ETH\n",
-      "2022-04-03 22:07:54.781834 COMP-ETH\n",
-      "2022-04-03 22:07:58.916833 DPI-ETH\n",
-      "2022-04-03 22:08:00.207951 FEI-ETH\n",
-      "2022-04-03 22:08:03.068807 LINK-ETH\n",
-      "2022-04-03 22:08:13.166777 SNX-ETH\n",
-      "2022-04-03 22:08:17.684764 UNI-ETH\n",
-      "2022-04-03 22:08:20.366752 YFI-ETH\n",
-      "2022-04-03 22:08:28.647747 LUNA-ETH\n",
-      "2022-04-03 22:08:31.284729 FTM-ETH\n",
-      "2022-04-03 22:08:35.629723 SUSHI-ETH\n",
-      "2022-04-03 22:08:39.968708 CRV-ETH\n",
-      "2022-04-03 22:08:46.482689 CVX-ETH\n"
+      "2022-04-05 10:57:17.661715 from_block= 0\n",
+      "2022-04-05 10:57:17.668929 BTC-ETH\n",
+      "2022-04-05 10:57:20.094243 USDC-ETH\n",
+      "2022-04-05 10:57:30.271531 DAI-ETH\n",
+      "2022-04-05 10:57:40.283176 1INCH-ETH\n",
+      "2022-04-05 10:57:43.815922 AAVE-ETH\n",
+      "2022-04-05 10:57:46.134603 COMP-ETH\n",
+      "2022-04-05 10:57:49.317247 DPI-ETH\n",
+      "2022-04-05 10:57:50.525727 FEI-ETH\n",
+      "2022-04-05 10:57:52.854862 LINK-ETH\n",
+      "2022-04-05 10:57:58.758055 SNX-ETH\n",
+      "2022-04-05 10:58:02.270122 UNI-ETH\n",
+      "2022-04-05 10:58:04.679448 YFI-ETH\n",
+      "2022-04-05 10:58:11.287633 LUNA-ETH\n",
+      "2022-04-05 10:58:13.822880 FTM-ETH\n",
+      "2022-04-05 10:58:18.076052 SUSHI-ETH\n",
+      "2022-04-05 10:58:21.429770 CRV-ETH\n",
+      "2022-04-05 10:58:27.296023 CVX-ETH\n",
+      "2022-04-05 10:58:28.922098 LDO-ETH\n"
      ]
     }
    ],
@@ -168,7 +175,8 @@
     "                  ,'ftm-eth': [w3_eth, Web3.toChecksumAddress('0xbdb80d19dea36eb7f63bdfd2bdd4033b2b7e8e4d'), 0.03]\n",
     "                  ,'sushi-eth': [w3_eth, Web3.toChecksumAddress('0xd01bbb3afed2cb5ca92ca3834d441dc737f0da70'), 0.02]\n",
     "                  ,'crv-eth': [w3_eth, Web3.toChecksumAddress('0x7f67ca2ce5299a67acd83d52a064c5b8e41ddb80'), 0.02]\n",
-    "                  ,'cvx-eth': [w3_eth, Web3.toChecksumAddress('0x8d73ac44bf11cadcdc050bb2bccae8c519555f1a'), 0.02]     \n",
+    "                  ,'cvx-eth': [w3_eth, Web3.toChecksumAddress('0x8d73ac44bf11cadcdc050bb2bccae8c519555f1a'), 0.02] \n",
+    "                  ,'ldo-eth': [w3_eth, Web3.toChecksumAddress('0x7898AcCC83587C3C55116c5230C17a6Cd9C71bad'), 0.02]                        \n",
     "                      }\n",
     "\n",
     "config = {'Ethereum':price_contracts_eth, \n",
@@ -204,6 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "ada33e94",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +266,7 @@
        "      <td>2021-02-18 10:43:05</td>\n",
        "      <td>Ethereum</td>\n",
        "      <td>1486000000000000</td>\n",
-       "      <td>0.00148599999999999991</td>\n",
+       "      <td>0.001486</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.020000000000000000</td>\n",
        "      <td>11880352</td>\n",
@@ -269,7 +278,7 @@
        "      <td>2021-02-18 10:55:03</td>\n",
        "      <td>Ethereum</td>\n",
        "      <td>12479365000000000</td>\n",
-       "      <td>0.0124793649999999992</td>\n",
+       "      <td>0.012479364999999999</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.020000000000000000</td>\n",
        "      <td>11880406</td>\n",
@@ -281,8 +290,8 @@
        "      <td>2021-02-18 11:47:08</td>\n",
        "      <td>Ethereum</td>\n",
        "      <td>1454500000000000</td>\n",
-       "      <td>0.00145450000000000006</td>\n",
-       "      <td>-0.0211978465679677486</td>\n",
+       "      <td>0.0014545</td>\n",
+       "      <td>-0.021197846567967749</td>\n",
        "      <td>0.020000000000000000</td>\n",
        "      <td>11880656</td>\n",
        "      <td>0xb170655b26a54ea69deb98102105e6b11a686338dcb1...</td>\n",
@@ -293,7 +302,7 @@
        "      <td>2021-02-18 12:23:53</td>\n",
        "      <td>Ethereum</td>\n",
        "      <td>108390000000000</td>\n",
-       "      <td>0.000108389999999999997</td>\n",
+       "      <td>0.00010839</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.029999999999999999</td>\n",
        "      <td>11880835</td>\n",
@@ -312,68 +321,68 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37294</th>\n",
-       "      <td>yfi-eth</td>\n",
-       "      <td>2022-04-03 21:03:32</td>\n",
+       "      <th>41526</th>\n",
+       "      <td>ldo-eth</td>\n",
+       "      <td>2022-04-05 07:11:24</td>\n",
        "      <td>Ethereum</td>\n",
-       "      <td>7194351520000000000</td>\n",
-       "      <td>7.19435151999999967</td>\n",
-       "      <td>0.0121598191520466692</td>\n",
-       "      <td>0.010000000000000000</td>\n",
-       "      <td>14515431</td>\n",
-       "      <td>0x8a1f0d46bc426a70ad38484101c8d7b525de2955df38...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37295</th>\n",
-       "      <td>comp-eth</td>\n",
-       "      <td>2022-04-03 21:16:04</td>\n",
-       "      <td>Ethereum</td>\n",
-       "      <td>48862500000000000</td>\n",
-       "      <td>0.0488625000000000032</td>\n",
-       "      <td>0.0218344989269718681</td>\n",
+       "      <td>1301000000000000</td>\n",
+       "      <td>0.001301</td>\n",
+       "      <td>-0.023031231461247859</td>\n",
        "      <td>0.020000000000000000</td>\n",
-       "      <td>14515491</td>\n",
-       "      <td>0x22c235706529c2353f7c45008ecde1c5bd143d790d39...</td>\n",
+       "      <td>14524478</td>\n",
+       "      <td>0x9843ba8c7b712b4018fbe1f162a3a65e0378f987af0c...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37296</th>\n",
+       "      <th>41527</th>\n",
+       "      <td>snx-eth</td>\n",
+       "      <td>2022-04-05 07:15:52</td>\n",
+       "      <td>Ethereum</td>\n",
+       "      <td>1940615239319789</td>\n",
+       "      <td>0.001940615239319789</td>\n",
+       "      <td>-0.020081229511933474</td>\n",
+       "      <td>0.020000000000000000</td>\n",
+       "      <td>14524507</td>\n",
+       "      <td>0xeae24e4068c707a820b72848522a34a36a4e971fad57...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41528</th>\n",
+       "      <td>cvx-eth</td>\n",
+       "      <td>2022-04-05 07:19:25</td>\n",
+       "      <td>Ethereum</td>\n",
+       "      <td>3778417225</td>\n",
+       "      <td>37.784172249999997462</td>\n",
+       "      <td>0.020091043466522684</td>\n",
+       "      <td>0.020000000000000000</td>\n",
+       "      <td>14524527</td>\n",
+       "      <td>0x55a838e4960390f20c05c789acd84823f4787692dfc5...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41529</th>\n",
+       "      <td>link-eth</td>\n",
+       "      <td>2022-04-05 08:22:31</td>\n",
+       "      <td>Ethereum</td>\n",
+       "      <td>4914527859252158</td>\n",
+       "      <td>0.004914527859252158</td>\n",
+       "      <td>-0.01085350786708994</td>\n",
+       "      <td>0.010000000000000000</td>\n",
+       "      <td>14524807</td>\n",
+       "      <td>0xdcb953abaa9a04b0e3e811450ea98193298599ed94f6...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41530</th>\n",
        "      <td>yfi-eth</td>\n",
-       "      <td>2022-04-03 22:00:26</td>\n",
+       "      <td>2022-04-05 08:58:56</td>\n",
        "      <td>Ethereum</td>\n",
-       "      <td>7105870150000000000</td>\n",
-       "      <td>7.10587015000000033</td>\n",
-       "      <td>-0.0122987276551647096</td>\n",
+       "      <td>6807588010000000000</td>\n",
+       "      <td>6.807588009999999912</td>\n",
+       "      <td>0.010209137880519359</td>\n",
        "      <td>0.010000000000000000</td>\n",
-       "      <td>14515692</td>\n",
-       "      <td>0x015ada979a934859020d2d99c2fddcf483aa3383c82c...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37297</th>\n",
-       "      <td>dai-eth</td>\n",
-       "      <td>2022-04-03 22:03:24</td>\n",
-       "      <td>Ethereum</td>\n",
-       "      <td>283950524437827</td>\n",
-       "      <td>0.000283950524437826977</td>\n",
-       "      <td>-0.0103429373852883533</td>\n",
-       "      <td>0.010000000000000000</td>\n",
-       "      <td>14515703</td>\n",
-       "      <td>0xef34ecf4d8046909bd621ce351952c271b8f2d9fe9e8...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37298</th>\n",
-       "      <td>usdc-eth</td>\n",
-       "      <td>2022-04-03 22:04:13</td>\n",
-       "      <td>Ethereum</td>\n",
-       "      <td>283350110000000</td>\n",
-       "      <td>0.000283350110000000024</td>\n",
-       "      <td>-0.0109943804537522283</td>\n",
-       "      <td>0.010000000000000000</td>\n",
-       "      <td>14515709</td>\n",
-       "      <td>0x190ecb67c3f32d7ad03fccb5c91f51023fcd02f03212...</td>\n",
+       "      <td>14524951</td>\n",
+       "      <td>0xa641f7ee7ac7faa96c42fbf18c16d478016f7a07bff8...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>37299 rows × 9 columns</p>\n",
+       "<p>41531 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -384,24 +393,24 @@
        "3       crv-eth 2021-02-18 11:47:08  Ethereum     1454500000000000   \n",
        "4       ftm-eth 2021-02-18 12:23:53  Ethereum      108390000000000   \n",
        "...         ...                 ...       ...                  ...   \n",
-       "37294   yfi-eth 2022-04-03 21:03:32  Ethereum  7194351520000000000   \n",
-       "37295  comp-eth 2022-04-03 21:16:04  Ethereum    48862500000000000   \n",
-       "37296   yfi-eth 2022-04-03 22:00:26  Ethereum  7105870150000000000   \n",
-       "37297   dai-eth 2022-04-03 22:03:24  Ethereum      283950524437827   \n",
-       "37298  usdc-eth 2022-04-03 22:04:13  Ethereum      283350110000000   \n",
+       "41526   ldo-eth 2022-04-05 07:11:24  Ethereum     1301000000000000   \n",
+       "41527   snx-eth 2022-04-05 07:15:52  Ethereum     1940615239319789   \n",
+       "41528   cvx-eth 2022-04-05 07:19:25  Ethereum           3778417225   \n",
+       "41529  link-eth 2022-04-05 08:22:31  Ethereum     4914527859252158   \n",
+       "41530   yfi-eth 2022-04-05 08:58:56  Ethereum  6807588010000000000   \n",
        "\n",
-       "                 price_decimal              deviation             threshold  \\\n",
-       "0         0.244378668045116043                    NaN  0.020000000000000000   \n",
-       "1       0.00148599999999999991                    NaN  0.020000000000000000   \n",
-       "2        0.0124793649999999992                    NaN  0.020000000000000000   \n",
-       "3       0.00145450000000000006 -0.0211978465679677486  0.020000000000000000   \n",
-       "4      0.000108389999999999997                    NaN  0.029999999999999999   \n",
-       "...                        ...                    ...                   ...   \n",
-       "37294      7.19435151999999967  0.0121598191520466692  0.010000000000000000   \n",
-       "37295    0.0488625000000000032  0.0218344989269718681  0.020000000000000000   \n",
-       "37296      7.10587015000000033 -0.0122987276551647096  0.010000000000000000   \n",
-       "37297  0.000283950524437826977 -0.0103429373852883533  0.010000000000000000   \n",
-       "37298  0.000283350110000000024 -0.0109943804537522283  0.010000000000000000   \n",
+       "               price_decimal             deviation             threshold  \\\n",
+       "0       0.244378668045116043                   NaN  0.020000000000000000   \n",
+       "1                   0.001486                   NaN  0.020000000000000000   \n",
+       "2       0.012479364999999999                   NaN  0.020000000000000000   \n",
+       "3                  0.0014545 -0.021197846567967749  0.020000000000000000   \n",
+       "4                 0.00010839                   NaN  0.029999999999999999   \n",
+       "...                      ...                   ...                   ...   \n",
+       "41526               0.001301 -0.023031231461247859  0.020000000000000000   \n",
+       "41527   0.001940615239319789 -0.020081229511933474  0.020000000000000000   \n",
+       "41528  37.784172249999997462  0.020091043466522684  0.020000000000000000   \n",
+       "41529   0.004914527859252158  -0.01085350786708994  0.010000000000000000   \n",
+       "41530   6.807588009999999912  0.010209137880519359  0.010000000000000000   \n",
        "\n",
        "       blockNumber                                            tx_hash  \n",
        "0         11879906  0x9610367f2cd00cba48361195cb211f54e5775cf54efc...  \n",
@@ -410,13 +419,13 @@
        "3         11880656  0xb170655b26a54ea69deb98102105e6b11a686338dcb1...  \n",
        "4         11880835  0x3a973394035ccfd333f19fbeb09003373e22a269331e...  \n",
        "...            ...                                                ...  \n",
-       "37294     14515431  0x8a1f0d46bc426a70ad38484101c8d7b525de2955df38...  \n",
-       "37295     14515491  0x22c235706529c2353f7c45008ecde1c5bd143d790d39...  \n",
-       "37296     14515692  0x015ada979a934859020d2d99c2fddcf483aa3383c82c...  \n",
-       "37297     14515703  0xef34ecf4d8046909bd621ce351952c271b8f2d9fe9e8...  \n",
-       "37298     14515709  0x190ecb67c3f32d7ad03fccb5c91f51023fcd02f03212...  \n",
+       "41526     14524478  0x9843ba8c7b712b4018fbe1f162a3a65e0378f987af0c...  \n",
+       "41527     14524507  0xeae24e4068c707a820b72848522a34a36a4e971fad57...  \n",
+       "41528     14524527  0x55a838e4960390f20c05c789acd84823f4787692dfc5...  \n",
+       "41529     14524807  0xdcb953abaa9a04b0e3e811450ea98193298599ed94f6...  \n",
+       "41530     14524951  0xa641f7ee7ac7faa96c42fbf18c16d478016f7a07bff8...  \n",
        "\n",
-       "[37299 rows x 9 columns]"
+       "[41531 rows x 9 columns]"
       ]
      },
      "execution_count": 6,
@@ -430,6 +439,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1e0ef537",
    "metadata": {},
    "source": [
     "**Write data frame to GCP BigQuery**"
@@ -438,13 +448,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "ace1d750",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-01-13 02:32:24.501475 gearbox.oracle_price_history, insert done\n"
+      "2022-04-05 10:59:00.011041 gearbox.oracle_price_history, insert done\n"
      ]
     }
    ],
@@ -472,6 +483,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a7769a79",
    "metadata": {},
    "source": [
     "Exploratory report:"
@@ -479,6 +491,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cade8847",
    "metadata": {},
    "source": [
     "https://datastudio.google.com/reporting/ce9b69b3-3d9b-4aee-bb62-7baab90a0eca"
@@ -487,6 +500,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9b9c0315",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa930e75",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -494,7 +516,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -508,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
