--- a/Lido_APR.ipynb
+++ b/Lido_APR.ipynb
@@ -35,8 +35,17 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "APR minus Lido fee = 0.03894659476974834\n"
+     ]
+    }
+   ],
    "source": [
+    "#https://docs.lido.fi/contracts/lido-oracle\n",
     "LidoFee = 0.1\n",
     "LidoOracle = Web3.toChecksumAddress('0x442af784A788A5bd6F42A01Ebe9F287a871243fb')\n",
     "LidoOracle_abi = \"\"\"[{\"constant\":true,\n",
@@ -49,29 +58,18 @@
     "                    \"stateMutability\":\"view\",\n",
     "                    \"type\":\"function\"}\n",
     "                    ]\n",
-    "                \"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "APR minus Lido fee = 0.038946594769748336\n"
-     ]
-    }
-   ],
-   "source": [
+    "                \"\"\"\n",
     "getLastCompletedReportDelta = w3_eth.eth.contract(address=LidoOracle, abi=LidoOracle_abi).functions.getLastCompletedReportDelta().call()\n",
+    "\n",
     "postTotalPooledEther = getLastCompletedReportDelta[0]\n",
     "preTotalPooledEther  = getLastCompletedReportDelta[1]\n",
     "timeElapsed          = getLastCompletedReportDelta[2]\n",
-    "ThisYear = (datetime(datetime.now().year+1, 1, 1, 0, 0, 0) - datetime(datetime.now().year, 1, 1, 0, 0, 0))\n",
-    "secondsInYear = ThisYear.total_seconds()\n",
+    "\n",
+    "ThisYear             = datetime.now().year                                \n",
+    "if ThisYear%4==0: #Leap year\n",
+    "    secondsInYear = 60*60*24*366\n",
+    "else:\n",
+    "    secondsInYear = 60*60*24*365\n",
     "\n",
     "Lido_APR = (postTotalPooledEther - preTotalPooledEther) * secondsInYear / (preTotalPooledEther * timeElapsed)\n",
     "Lido_APR = Lido_APR*(1-LidoFee)\n",
