--- a/Lido_APR.ipynb
+++ b/Lido_APR.ipynb
@@ -65,8 +65,8 @@
     "preTotalPooledEther  = getLastCompletedReportDelta[1]\n",
     "timeElapsed          = getLastCompletedReportDelta[2]\n",
     "\n",
-    "ThisYear             = datetime.now().year                                \n",
-    "if ThisYear%4==0: #Leap year\n",
+    "thisYear             = datetime.now().year                                \n",
+    "if thisYear%4==0: #Leap year\n",
     "    secondsInYear = 60*60*24*366\n",
     "else:\n",
     "    secondsInYear = 60*60*24*365\n",
