--- a/Lido_APR.ipynb
+++ b/Lido_APR.ipynb
@@ -3,6 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "a7fb9c66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install web3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "60286e81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "id": "7c9b0b19",
    "metadata": {},
    "outputs": [
     {
@@ -33,14 +45,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "id": "b0cdeec4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "APR minus Lido fee = 0.03894659476974834\n"
+      "postTotalPooledEther = 3135350687202997257325792 preTotalPooledEther = 3134979007577366257325792 timeElapsed = 86400 secondsInYear = 31536000\n",
+      "Lido APR = 0.04327399418860927\n",
+      "LidoFee = 0.1\n",
+      "Lido APR minus Lido fee = 0.03894659476974834\n"
      ]
     }
    ],
@@ -48,6 +64,8 @@
     "#https://docs.lido.fi/contracts/lido-oracle\n",
     "LidoFee = 0.1\n",
     "LidoOracle = Web3.toChecksumAddress('0x442af784A788A5bd6F42A01Ebe9F287a871243fb')\n",
+    "stETH = Web3.toChecksumAddress('0xae7ab96520DE3A18E5e111B5EaAb095312D7fE84')\n",
+    "\n",
     "LidoOracle_abi = \"\"\"[{\"constant\":true,\n",
     "                    \"inputs\":[],\n",
     "                    \"name\":\"getLastCompletedReportDelta\",\n",
@@ -59,8 +77,16 @@
     "                    \"type\":\"function\"}\n",
     "                    ]\n",
     "                \"\"\"\n",
+    "stETH_abi = \"\"\"[{\"constant\":true,\n",
+    "                \"inputs\":[],\n",
+    "                \"name\":\"getFee\",\n",
+    "                \"outputs\":[{\"name\":\"feeBasisPoints\",\"type\":\"uint16\"}],\n",
+    "                \"payable\":false,\n",
+    "                \"stateMutability\":\"view\",\n",
+    "                \"type\":\"function\"}\n",
+    "                ]\n",
+    "            \"\"\"\n",
     "getLastCompletedReportDelta = w3_eth.eth.contract(address=LidoOracle, abi=LidoOracle_abi).functions.getLastCompletedReportDelta().call()\n",
-    "\n",
     "postTotalPooledEther = getLastCompletedReportDelta[0]\n",
     "preTotalPooledEther  = getLastCompletedReportDelta[1]\n",
     "timeElapsed          = getLastCompletedReportDelta[2]\n",
@@ -71,22 +97,25 @@
     "else:\n",
     "    secondsInYear = 60*60*24*365\n",
     "\n",
+    "print('postTotalPooledEther =',postTotalPooledEther,\n",
+    "      'preTotalPooledEther =',preTotalPooledEther, \n",
+    "      'timeElapsed =',timeElapsed, \n",
+    "      'secondsInYear =',secondsInYear)\n",
+    "    \n",
     "Lido_APR = (postTotalPooledEther - preTotalPooledEther) * secondsInYear / (preTotalPooledEther * timeElapsed)\n",
+    "print(\"Lido APR =\", Lido_APR)\n",
+    "\n",
+    "LidoFee = w3_eth.eth.contract(address=stETH, abi=stETH_abi).functions.getFee().call()\n",
+    "LidoFee/=10**4\n",
+    "print('LidoFee =',LidoFee)\n",
     "Lido_APR = Lido_APR*(1-LidoFee)\n",
-    "print(\"APR minus Lido fee =\", Lido_APR)"
+    "print(\"Lido APR minus Lido fee =\", Lido_APR)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -100,9 +129,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
