--- a/Convex_APR.ipynb
+++ b/Convex_APR.ipynb
@@ -1532,10 +1532,14 @@
     "    crvPerYear = rate * 86400 * 365\n",
     "    cvxPerYear = getCVXMintAmount(crvPerYear)\n",
     "    threepoolPerYear = threerate * 86400 * 365\n",
+    "    \n",
+    "    crvAPR = (crvPerYear * crvPrice)\n",
+    "    cvxAPR = (cvxPerYear * cvxPrice)\n",
+    "    threepoolAPR = (threepoolPerYear * virtualPrice) \n",
+    "    \n",
+    "    apr = crvAPR + cvxAPR + threepoolAPR\n",
     "\n",
-    "    apr = (crvPerYear * crvPrice) + (cvxPerYear * cvxPrice) + (threepoolPerYear * virtualPrice)\n",
-    "\n",
-    "    return apr\n",
+    "    return {'APR':apr, 'crvAPR':crvAPR, 'cvxAPR':cvxAPR, '3poolAPR': threepoolAPR}\n",
     "\n"
    ]
   },
@@ -1580,18 +1584,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-04-13 04:16:57.377595 start...\n",
+      "2022-04-13 08:54:45.747967 start...\n",
       "frax pool:\n",
-      "{'APR': 0.0794118596223612, 'baseAPR': 0.001, 'crvAPR': 0.03002888097189632, 'cvxAPR': 0.045124954814556396, 'extraAPR': 0.0032580238359084875}\n",
+      "{'APR': 0.07950394636947657, 'baseAPR': 0.0009, 'crvAPR': 0.02989472856346708, 'cvxAPR': 0.04548207342240781, 'extraAPR': 0.0032271443836016764}\n",
       "\n",
       "steth pool:\n",
-      "{'APR': 0.05205457670367744, 'baseAPR': 0.020499999999999997, 'crvAPR': 0.005389917699280047, 'cvxAPR': 0.008087008430067752, 'extraAPR': 0.01807765057432964}\n",
+      "{'APR': 0.05309559829656716, 'baseAPR': 0.0206, 'crvAPR': 0.005346063109329599, 'cvxAPR': 0.008119894877826913, 'extraAPR': 0.01902964030941065}\n",
       "\n",
       "lusd pool:\n",
-      "{'APR': 0.07750454668598732, 'baseAPR': 0.0024, 'crvAPR': 0.02758421755905132, 'cvxAPR': 0.04145131389051821, 'extraAPR': 0.006069015236417781}\n",
+      "{'APR': 0.07775339495209577, 'baseAPR': 0.0023, 'crvAPR': 0.0274260592266589, 'cvxAPR': 0.04172622062066775, 'extraAPR': 0.006301115104769125}\n",
       "\n",
       "tricrypto2 pool:\n",
-      "{'APR': 0.12381030177893579, 'baseAPR': 0.0116, 'crvAPR': 0.044825926268568884, 'cvxAPR': 0.06738437551036691, 'extraAPR': 0}\n"
+      "{'APR': 0.12083202244655383, 'baseAPR': 0.0085, 'crvAPR': 0.04455131063605365, 'cvxAPR': 0.06778071181050017, 'extraAPR': 0}\n"
      ]
     }
    ],
@@ -1625,8 +1629,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Staked CVX apr 0.018815126556673722\n",
-      "Staked CvxCRV apr 0.41609491071111315\n"
+      "Staked CVX apr 0.018574239212736373\n",
+      "Staked CvxCRV apr {'APR': 0.4188705114701827, 'crvAPR': 0.1392027086067362, 'cvxAPR': 0.21178408761960482, '3poolAPR': 0.06788371524384172}\n"
      ]
     }
    ],
@@ -1641,7 +1645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a46fe885",
+   "id": "989a74f2",
    "metadata": {},
    "outputs": [],
    "source": []
